# moca

./: CMakeLists.txt  README.md  build.sh  input_bad.moca  input_good.moca  moca_good_bin  moca_output.c
src/: ast.c  ast.h  codegen.c  lexer.l  main.c  ownership.c  ownership.h  parser.y
